[package]
name = "imgui-wgpu-winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = {version = "^0.11.0", features = ["docking"]}
imgui-wgpu = {git = "https://github.com/Yatekii/imgui-wgpu-rs.git" }
winit = "^0.27.2"
env_logger = "0.10.0"
wgpu = "0.15.1"
pollster = "0.3.0"
raw-window-handle = "0.5.2"
